# Rust-testAPI

./: .env  Cargo.toml  DEVELOP.md  README.md
src/: db.rs  lib.rs  main.rs  routes.rs
src/controllers/: category.rs  comment.rs  mod.rs
src/models/: category.rs  mod.rs  task.rs  user.rs
