[package]
name = "Rust_testAPI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["tokio-runtime"]