[package]
name = "Rust_testAPI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
tokio = "1.17.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = "1.0.136"
chrono = "0.4"
dotenvy = "0.15.1"
futures = "0.3"
async_once = "0.2.6"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["tokio-runtime"]